--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>Kevin Stoneham</title>
     <head>
         <header><h1>Student Bio</h1></header>
-        <link rel="stylesheet" type="text/css" href="css/style.css">
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head> 
         <body>
             <div class="container"></div>
